// Vitest Snapshot v1

exports[`render AppLayout component > should render AppLayout component 1`] = `
<Layout
  className="app-layout"
>
  <Connect(SideNav) />
  <Layout>
    <Content
      className="app-layout__content"
    >
      <div
        className="app-layout__container"
      >
        <Component />
      </div>
    </Content>
  </Layout>
</Layout>
`;

exports[`render AppLayout component should render AppLayout component 1`] = `
<Layout
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <Connect(Component) />
  <Layout
    className="site-layout"
  >
    <Header
      className="site-layout-background"
      style={
        Object {
          "padding": 0,
        }
      }
    />
    <Content
      style={
        Object {
          "margin": "0 16px",
        }
      }
    >
      <div
        className="site-layout-background"
        style={
          Object {
            "minHeight": 360,
            "padding": 24,
          }
        }
      >
        <Component />
      </div>
    </Content>
  </Layout>
</Layout>
`;
